--- a/src/app/(content)/globals.css
+++ b/src/app/(content)/globals.css
@@ -35,6 +35,6 @@
 		@apply border-border;
 	}
 	body {
-		@apply bg-background text-foreground overflow-x-clip;
+		@apply overflow-x-clip bg-background text-foreground;
 	}
 }
