update: `global.css`

--- a/src/app/(content)/globals.css
+++ b/src/app/(content)/globals.css
@@ -6,28 +6,77 @@
 	:root {
 		--background: 0 0% 100%;
 		--foreground: 225 12% 19%;
+
 		--card: 0 0% 100%;
-		--card-foreground: 240 10% 3.9%;
-		--popover: 0 0% 100%;
-		--popover-foreground: 240 10% 3.9%;
-		--primary: 240 5.9% 10%;
-		--primary-foreground: 0 0% 98%;
-		--secondary: 76 100% 69%;
-		--secondary-foreground: 240 5.9% 10%;
+		/** fix ? */
+		--popover: 222 9% 38%;
+		--popover-foreground: 230 13% 72%;
 		--muted: 240 4.8% 95.9%;
-		--muted-foreground: 240 3.8% 46.1%;
-		--accent: 240 4.8% 95.9%;
-		--accent-foreground: 240 5.9% 10%;
-		--destructive: 0 84.2% 60.2%;
-		--destructive-foreground: 0 0% 98%;
+
 		--border: 0 0% 100%;
 		--input: 240 5.9% 90%;
 		--ring: 240 10% 3.9%;
-		--radius: 0.5rem;
+		--radius: 1.25rem;
+
+		/* valid */
+		--primary: 76 100% 69%;
+		--secondary: 223 100% 74%;
+		--accent: 0 0% 100%;
+
+		--content-0: 0 0% 0%;
+		--content-100: 225 12% 19%;
+		--content-200: 222 10% 25%;
+		--content-300: 222 9% 38%;
+
+		--content-700: 230 13% 72%;
+		--content-800: 217 24% 87%;
+		--content-900: 218 44% 94%;
+		--content-1: 0 0% 100%;
 
 		--gradient-start: 180 73% 80%;
 		--gradient-end: 223 99% 74%;
 	}
+}
+
+h1 {
+	font-family: var(--font-bebas);
+	font-size: 96px;
+}
+
+h2 {
+	font-family: var(--font-bebas);
+	font-size: 64px;
+}
+
+h3 {
+	font-family: var(--font-bebas);
+	font-size: 48px;
+}
+
+h4 {
+	font-family: var(--font-gilroy-bold);
+	font-size: 32px;
+}
+
+h5 {
+	font-family: var(--font-gilroy-bold);
+	font-size: 24px;
+}
+
+h6 {
+	font-family: var(--font-gilroy-bold);
+	font-size: 20px;
+}
+
+a {
+	font-family: var(--font-gilroy-bold);
+	font-size: 16px;
+}
+
+a:hover,
+a:focus,
+a:focus-visible {
+	@apply whitespace-nowrap text-primary outline-none;
 }
 
 @layer base {
@@ -35,6 +84,8 @@
 		@apply border-border;
 	}
 	body {
+		font-size: 16px;
+		font-family: var(--font-gilroy);
 		@apply overflow-x-clip bg-background text-foreground;
 	}
 }
