update: global colors

--- a/src/app/(content)/globals.css
+++ b/src/app/(content)/globals.css
@@ -35,6 +35,9 @@
 		--gray-1: 0 0% 100%;
 		--white: 0 0% 100%;
 
+		--lime: 76 100% 69%;
+		--blue: 223 100% 74%;
+
 		--gradient-start: 180 73% 80%;
 		--gradient-end: 223 99% 74%;
 	}
