--- a/src/app/(content)/globals.css
+++ b/src/app/(content)/globals.css
@@ -102,10 +102,15 @@ a:focus-visible {
 	* {
 		@apply border-border;
 	}
+
+	html {
+		scroll-behavior: smooth;
+	}
 	body {
 		@apply min-h-screen w-screen overflow-x-clip bg-white text-dark;
 		@apply selection:bg-dark selection:text-primary;
 
+		scroll-behavior: smooth;
 		font-size: 16px;
 		font-family: var(--font-gilroy);
 	}
