update: buttons and images

--- a/src/app/(content)/globals.css
+++ b/src/app/(content)/globals.css
@@ -81,27 +81,35 @@ a:focus-visible {
 	.img {
 		top: -30vw;
 	}
+
+	@media (min-width: 768px) and (max-width: 1000px) {
+		.img {
+			left: 12%;
+		}
+	}
+
 	@media (min-width: 1000px) and (max-width: 1300px) {
 		.img {
-			left: 10%;
+			left: 15%;
 		}
 	}
 
 	@media (min-width: 1300px) and (max-width: 1500px) {
 		.img {
-			left: 17%;
+			left: 20%;
 		}
 	}
 	@media (min-width: 1500px) and (max-width: 1920px) {
 		.img {
 			left: 22%;
+			top: -28vw;
 		}
 	}
 
 	@media (min-width: 1920px) {
 		.img {
 			left: 25%;
-			top: -25vw;
+			top: -24vw;
 		}
 	}
 }
